# idento

./: .dockerignore  .env.example  .gitattributes  .gitignore  .golangci.yml  AGENTS.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  README.ru.md  docker-compose.prod.yml  docker-compose.yml  go.work  go.work.sum  package-lock.json  package.json
.github/: CI.md  CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  copilot-instructions.md  labeler.yml
agent/: README.md  config_auth_test.go  go.mod  go.sum  info_test.go  main.go  openapi.yaml  scan_buffer.go  scan_buffer_test.go  scan_routes.go  scan_routes_test.go
backend/: .dockerignore  Dockerfile  go.mod  go.sum  main.go  main_test.go  openapi.yaml
deploy/: Dockerfile  nginx.conf
desktop/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/.cargo/: audit.toml
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/sidecars/: .gitkeep
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
docs/: DESKTOP_KIOSK.md  DUAL_DISTRIBUTION_REWORK.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  MULTI_ORG_MIGRATION.md  SUPER_ADMIN_SETUP.md  TESTING_GUIDE.md  ZONES_FINAL_SUMMARY.md  ZONES_IMPLEMENTATION_COMPLETE.md  ZONES_MOBILE_STATUS.md
examples/: sample-attendees.csv
gradle/: libs.versions.toml
landing/: eslint.config.mjs  next-sitemap.config.js  package.json  (+3 more)
(+1260 files in other folders)
