[package]
name = "idento-desktop"
version = "0.1.0"
description = "Idento kiosk desktop app"
edition = "2021"
license = "Apache-2.0 OR MIT"

[lib]
name = "idento_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = ["codegen"] }

[dependencies]
tauri = { version = "2.11.5", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
